--- a/src/app/employees/employee-home/employee-home.component.html
+++ b/src/app/employees/employee-home/employee-home.component.html
@@ -134,8 +134,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success" (click)="submitAdditionalInfo()" data-bs-dismiss="modal">Submit</button>
+          <button type="button" class="btn btn-warning" (click)="closeModal()" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="submitAdditionalInfo()" data-bs-dismiss="modal">Submit</button>
         </div>
       </div>
     </div>
